homework4-metrics/kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework4-depl
  namespace: homework4
  labels:
    app: homework4-app
spec:
  replicas: 3
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: homework4-app
  template:
    metadata:
      labels:
        app: homework4-app
    spec:
      containers:
      - name: homework4-container
        image: lancer7082/otus-msa-homework4:1.3
        ports:
        - containerPort: 8000
