homework4-metrics/kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework4-service
  namespace: homework4
  labels:
    app: homework4-app
spec:
  selector:
    app: homework4-app
  ports:
    - protocol: TCP
      name: homework4-port
      port: 80
      targetPort: 8000
  type: LoadBalancer
