homework4-metrics/kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework4-ingress
  namespace: homework4
  labels:
    app: homework4-app  
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework4-service
            port:
              number: 8000
